--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 Workflows/.metadata/knime/knime.log
 Workflows/.metadata/knime/knime.log
 Workflows/.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
+Workflows/.metadata/knime/knime.log
