--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ Workflows/.metadata/knime/knime.log
 Workflows/.metadata/knime/knime.log
 Workflows/.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
 Workflows/.metadata/knime/knime.log
+Workflows/.metadata/.log
+Workflows/.metadata/knime/knime.log
