--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Workflows/.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
 Workflows/.metadata/knime/knime.log
 Workflows/.metadata/.log
 Workflows/.metadata/knime/knime.log
+Workflows/.metadata/knime/nodeusage_3.0.json
