--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ Workflows/.metadata/knime/knime.log
 Workflows/.metadata/knime/knime.log
 Workflows/.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
 Workflows/.metadata/knime/knime.log
+Workflows/Snowflake/KNIME_project/.knimeLock
+Workflows/.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
+Workflows/.metadata/knime/knime.log
