Revert "Get back"
This reverts commit 45fa28bd0562fd38ac2dbe16530734c55b150f10.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ Workflows/.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
 Workflows/.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
 Workflows/.metadata/knime/knime.log
 Workflows/.metadata/knime/nodeusage_3.0.json
+Workflows/.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
+Workflows/.metadata/knime/knime.log
