--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ Workflows/.metadata/knime/knime.log
 Workflows/.metadata/knime/nodeusage_3.0.json
 Workflows/.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
 Workflows/.metadata/knime/knime.log
+Workflows/.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
