--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ Workflows/.metadata/knime/nodeusage_3.0.json
 Workflows/.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
 Workflows/.metadata/knime/knime.log
 Workflows/.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
+Workflows/.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
+Workflows/.metadata/knime/knime.log
