Adding Knime Log to git ignore again
Adding Knime Log to git ignore again

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Workflows/.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
 *.log
 Workflows/.metadata/knime/knime.log
 Workflows/.metadata/knime/knime.log
+Workflows/.metadata/knime/knime.log
