--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-
-*.log
-Workflows/.metadata/.plugins/org.eclipse.e4.workbench/workbench.xmi
-*.log
-Workflows/.metadata/knime/knime.log
+Workflows/.metadata/knime/nodeusage_3.0.json
 Workflows/.metadata/knime/knime.log
 Workflows/.metadata/knime/knime.log
